[package]
name = "nanoid-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gromo <gromo.mq@gamil.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/imguolao/nanoid-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
